updates tables after deleting entity